ACS-3347 Upgrade to Java 17 (#1486)